# glslwrap

./: .clang_complete  .gitignore  CMakeLists.txt  README.md  compile_flags.txt
include/glslwrap/: glslwrap.h  macros.h
src/: glslwrap.c  main.c
